frontend/src/style.css
@import "tailwindcss";

@custom-variant dark (&:where(.dark, .dark *));

@font-face {
    font-display: swap;
    font-family: "Lora";
    font-style: normal;
    font-weight: 400 700;
    src: url("./assets/fonts/Lora-VariableFont_wght.woff2") format("woff2");
}

@font-face {
    font-display: swap;
    font-family: "Montserrat";
    font-style: normal;
    font-weight: 400 700;
    src: url("./assets/fonts/Montserrat-VariableFont_wght.woff2")
        format("woff2");
}

@plugin "@tailwindcss/typography";

@theme {
    /* rating gradient colors */
    --background-color-average-end: #f87171;
    --background-color-average-start: #fca5a5;
    --background-color-excellent-end: #10b981;
    --background-color-excellent-start: #6ee7b7;
    --background-color-good-end: #f59e0b;
    --background-color-good-start: #fbbf24;
    --background-color-great-end: #34d399;
    --background-color-great-start: #a7f3d0;
    --background-color-poor-end: #ef4444;
    --background-color-poor-start: #fee2e2;

    /* global app backgrounds */
    --background-color-dark: #121212;
    --background-color-light: #fdfdfd;

    /* component backgrounds */
    --background-color-surface-dark: #1e1e1e;
    --background-color-surface-light: #ffffff;

    /* table header backgrounds */
    --background-color-table-header-dark: #191b1f;
    --background-color-table-header-light: #f9fafb;

    /* border colors */
    --color-border-dark: #2d2d2d;
    --color-border-focus: #60a5fa;
    --color-border-light: #e5e7eb;

    /* divider colors */
    --color-divider-dark: #323333;
    --color-divider-light: #e8e9eb;

    /* text colors */
    --color-accent-dark: #60a5fa;
    --color-accent-light: #3b82f6;
    --color-backdrop-dark: #1a1a1a;
    --color-backdrop-light: #f3f4f6;
    --color-muted-dark: #99a1af;
    --color-muted-light: #6a7282;
    --color-primary-dark: #e5e7eb;
    --color-primary-light: #1f2937;
    --color-secondary-dark: #d1d5db;
    --color-secondary-light: #4b5563;
    --color-subtle-accent-dark: #6a7282;
    --color-subtle-accent-light: #99a1af;

    /* typography variables */
    --font-lora: "Lora", sans-serif;
    --font-montserrat: "Montserrat", sans-serif;
}

.tooltip-left {
    background-color: #333;
    border-radius: 6px;
    color: #fff;
    padding: 5px 10px;
    text-align: center;
    transform: translate(-100%, -50%);
    white-space: pre-line;
    width: max-content;
    z-index: 10;
}

.tooltip-top {
    background-color: #333;
    border-radius: 6px;
    color: #fff;
    padding: 5px 10px;
    text-align: center;
    transform: translate(-50%, -100%);
    white-space: pre-line;
    width: max-content;
    z-index: 10;
}

